--- a/src/style.css
+++ b/src/style.css
@@ -296,7 +296,7 @@ button:focus {
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #4d57da !important;
+  color: #cbceff !important;
   font-weight: 600 !important;
 }
 
