--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(44, 52, 165), rgb(3, 3, 122));
+  background-image: linear-gradient(-140deg, #030536, rgb(0 13 57), #000844);
 }
