--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(-140deg, #030536, rgb(0 13 57), #000844);
+  background-image: linear-gradient(-140deg, #1a2745, #161c29, #202634);
 }
