--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #06016ba9 !important;
+  background-color: #201e47a8 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(39, 27, 99, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -137,7 +137,7 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #0b004f !important;
+    background-color: #1f1a3bba !important;
   }
 
   .navbar-nav .nav-item a::after {
@@ -422,7 +422,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(0 13 116);
+  background-color: rgb(10 13 36 / 78%);
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important;
@@ -495,13 +495,14 @@ button:focus {
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
-  border-color: rgba(255, 255, 255, 0.699) !important;
+  border-color: rgb(255, 255, 255) !important;
+  border-width: 1.5px;
 }
 
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(0, 19, 160, 0.561) !important;
+  box-shadow: 0 3px 3px 4px rgba(1, 5, 26, 0.487) !important;
 }
 
 .blog-card {
