--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #201e47a8 !important;
+  background-color: #363097d9 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(39, 27, 99, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -137,7 +137,8 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #1f1a3bba !important;
+    background-color: #363097d9 !important;
+    backdrop-filter: blur(15px) !important;
   }
 
   .navbar-nav .nav-item a::after {
@@ -422,10 +423,11 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10 13 36 / 78%);
+  background-color: #363097d9 !important;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important;
+  backdrop-filter: blur(15px) !important;
 }
 
 .footer-copywright {
@@ -492,7 +494,7 @@ button:focus {
   box-shadow: 0 4px 5px 3px rgba(83, 90, 171, 0) !important;
   color: white !important;
   background-color: transparent !important;
-  opacity: 0.9 !important;
+  opacity: 1 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
   border-color: rgb(255, 255, 255) !important;
@@ -551,9 +553,9 @@ button:focus {
 .btn-primary {
   color: #fff !important;
   /* background-color: #0c1e94 !important; */
-  border-color: #0009b5e5 !important;
+  border-color: #38393b00 !important;
 
-  background-color: rgb(0 13 116) !important;
+  background-color: #3b51ca !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(39, 27, 99, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -561,8 +563,8 @@ button:focus {
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #0906c7d7 !important;
-  border-color: #2320c5d7 !important;
+  background-color: #1130e2 !important;
+  border-color: #2e2e3400 !important;
 }
 
 .btn:focus {
@@ -613,7 +615,7 @@ button:focus {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(47, 0, 255, 0.883) !important;
+  border: 2.2px solid #363097d9 !important;
 }
 
 .tech-icon-images {
