--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(-140deg, #141742, #141742, #1d1f32);
+  background-image: linear-gradient(-140deg, #203354, #203354, #203354);
 }
