--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #363097d9 !important;
+  background-color: #294370 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(39, 27, 99, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -137,7 +137,7 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #363097d9 !important;
+    background-color: #294370 !important;
     backdrop-filter: blur(15px) !important;
   }
 
@@ -423,7 +423,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: #363097d9 !important;
+  background-color: #294370 !important;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important;
